--- a/style.css
+++ b/style.css
@@ -10,6 +10,16 @@ body {
   height: 100vh;
 }
 
+.units {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+.units label {
+  font-size: 14px;
+}
+
 .container {
   background-color: rgba(255, 255, 255, 0.85);
   padding: 30px;
