--- a/style.css
+++ b/style.css
@@ -10,22 +10,13 @@ body {
   height: 100vh;
 }
 
-.units {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 15px;
-  font-weight: bold;
-}
-.units label {
-  font-size: 14px;
-}
-
 .container {
   background-color: rgba(255, 255, 255, 0.85);
   padding: 30px;
   border-radius: 20px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
   max-width: 400px;
+  width: 90%;
   text-align: center;
 }
 
@@ -67,4 +58,15 @@ button:hover {
 
 .img-container img {
   width: 100px;
+}
+
+.units {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+
+.units label {
+  font-size: 14px;
 }
